<resources>
    <string name="app_name">Photo Editor</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
    <string name="a_face_filter_app">A Face Filter App</string>
    <string name="go_on_now_will_you">GO ON NOW, WILL YOU?</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">SIGN IN</string>
    <string name="todo">TODO</string>
    <string name="google_icon">Google icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="new_user_register_now">New user? Register Now</string>

    <style name="MenuStyle" parent="Theme.AppCompat.Light">
        <item name="android:background">@android:color/white</item>
    </style>


</resources>
